# BrainIa

./: BearerCompatible.vala  BrainIa.vala  Default.vala  Gemini.vala  Glm.vala  HttpClient.vala  Mistral.vala  OpenAi.vala  Readme.md  Response.vala  main.vala  meson.build
vapi/: json-glib-1.0.vapi  meson.build
